# e2D

./: .gitignore  BUILD_CHECKLIST.md  DEVELOPER_GUIDE.md  LICENSE  MANIFEST.in  PROJECT.md  PUBLISHING_CHECKLIST.md  QUICKSTART.md  README.md  RUNNER_SECURITY.md  TODO.txt  build.bat  build_dev.bat  clean.bat  def_plot.py  new_version.bat  new_version.py  pyproject.toml  setup.cfg  setup.py  test_e2D.py  test_vector2int.py
.github/workflows/: publish.yml  python-app.yml  test.yml
__cytonizer__/: Cmain.c  Cmain.pyx  setup.py
cytonizer/: Cmain.pyx  setup.py
docs/: API_REFERENCE.md  COLORS.md  ENGINE.md  INPUT.md  PLOTS.md  PROJECT_STRUCTURE.md  RECORDING.md  SHAPES.md  TEXT.md  VECTORS.md
e2D/: __init__.py  __init__.pyi  __main__.py  _constants.py  _pivot.py  _types.py  ccolors.pyi  ccolors.pyx  color_defs.py  colors.py  colors.pyi  commons.py  commons.pyi  cvb.py  cvectors.pxd  cvectors.pyi  cvectors.pyx  cython_beautifier.py  def_colors.py  default.py  devices.py  devices.pyi  e2D.py  envs.py  gradient.py  image.py  input.py  palette.py  plot.py  plots.py  plots.pyi  recorder.py  shapes.py  shapes.pyi  template.py  test_colors.py  text.py  text_renderer.py  text_renderer.pyi  types.py  (+6 more)
e2D/core/: camera.py  utils.py  window.py
e2D/shaders/: curve_vertex.glsl  line_instanced_vertex.glsl  plot_grid_fragment.glsl  plot_grid_vertex.glsl  segment_fragment.glsl  segment_vertex.glsl  stream_fragment.glsl  stream_shift_compute.glsl  stream_vertex.glsl
e2D/ui/: __init__.py  base.py  button.py  containers.py  input_field.py  label.py  manager.py  plot.py  slider.py  theme.py  toggle.py
examples/: README.md  compare_performance.py  default.py  example_colors.py  example_containers.py  example_gradients.py  example_input.py  example_input_fields.py  example_keys.py  example_shapes.py  example_stats.py  example_text.py  example_ui.py  example_usage.py  example_vector2int.py  example_vectors.py  example_widgets.py  graphs.py  shapes_demo.py
scripts/linux/: build.sh  clean.sh  new_version.sh
scripts/windows/: build.bat  clean.bat  new_version.bat
shaders/: particle_compute.glsl  point_fragment.glsl  point_vertex.glsl
tests/: test_color_type.py  test_colors.py  test_input.py  test_ui.py  test_vectors.py
