[build-system]
requires = [
    "setuptools>=54",
    "wheel",
    "cython>=0.29.0",
    "numpy>=1.19.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "e2D"
dynamic = ["version"]
description = "High-performance 2D graphics and math library with ultra-optimized vector operations"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Riccardo Mariani", email = "riccardo.mariani@emptyhead.dev"}
]
keywords = ["vector", "2d", "simulation", "performance", "cython", "numpy", "moderngl", "games", "graphics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Cython",
    "Programming Language :: C",
    "Topic :: Games/Entertainment",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Graphics",
]

dependencies = [
    "numpy>=1.19.0",
    "moderngl",
    "glfw",
    "Pillow>=8.0.0",
    "attrs",
]

[project.optional-dependencies]
dev = [
    "build",
    "twine",
    "pytest",
    "black",
    "mypy",
]
performance = [
    "cython>=0.29.0",
]
rec = [
    "opencv-python",
]
all = [
    "opencv-python",
]

[project.urls]
Homepage = "https://github.com/marick-py/e2D"
Repository = "https://github.com/marick-py/e2D"
Issues = "https://github.com/marick-py/e2D/issues"

[tool.setuptools.dynamic]
version = {attr = "e2D.__version__"}
