[metadata]
name = e2D
version = 1.0.6
author = Riccardo Mariani
author_email = ricomari2006@gmail.com
description = Python library for 2D games. Streamlines dev with keyboard/mouse input, vector calculations, color manipulation, and collision detection. Simplify game creation and unleash creativity!
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/marick-py/e2D
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
pakages = find:
python_requires = >= 3.9
install_requires = 
	numpy
	pygame
include_package_data = True

