[metadata]
name = e2D
version = 2.0.2
author = Riccardo Mariani
author_email = riccardo.mariani@emptyhead.dev
description = High-performance 2D graphics and math library. Ultra-optimized vector operations with Cython, ModernGL rendering, modern color system with 80+ pre-defined colors, screen recording, text rendering, keyboard/mouse input, and collision detection for games, simulations, and real-time graphics.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/marick-py/e2D
license = MIT
license_files = LICENSE
classifiers = 
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Programming Language :: Python :: 3.12
	Programming Language :: Python :: 3.13
	Programming Language :: Python :: 3.14
	Programming Language :: Cython
	Programming Language :: C
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Development Status :: 4 - Beta
	Intended Audience :: Developers
	Intended Audience :: Science/Research
	Topic :: Games/Entertainment
	Topic :: Scientific/Engineering
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: Multimedia :: Graphics

[options]
packages = find:
python_requires = >=3.9
install_requires = 
	numpy>=1.19.0
	moderngl
	glfw
	Pillow>=8.0.0
	attrs
setup_requires = 
	numpy>=1.19.0
	cython>=0.29.0
include_package_data = True
zip_safe = False

[options.extras_require]
dev = 
	build
	twine
	pytest
	black
	mypy
performance = 
	cython>=0.29.0
rec = 
	opencv-python
all = 
	opencv-python

[options.package_data]
e2d = 
	*.pyx
	*.pxd
	*.c
	shaders/*.glsl

